number and new waves design

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,7 +22,7 @@
                       <i class='fa fa-phone'></i>
                     </div>
                     <div class='content'>
-                      <a href='tel:+012345678'>+44 2071 646 839</a>
+                      <a href='tel:+44 2071 646 839'>+44 2071 646 839</a>
                     </div>
                   </div>
                   <div class='icon-box'>
@@ -52,8 +52,16 @@
                 <p class='copyright'>
                   Academia Translations
                   &copy;
-                  2016
+                  2016 by
                 </p>
+                <div>
+                  <a href="http://newwaves.design/">
+                   <p class='copyright '>
+                    &nbspNew Waves Design
+                    </p>
+                  </a>
+
+                </div>
                 <div class='links'>
                   <a class='btn btn-circle btn-medium-light btn-sm' href='https://www.linkedin.com/company/academia-translations'>
                     <i class='fa fa-linkedin text-dark'></i>
