--- a/app/assets/stylesheets/jednotka/theme/structure/_footer.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_footer.scss
@@ -150,6 +150,7 @@
     padding: 20px 0;
     text-align: center;
 
+
     @include sm-plus {
       text-align: left;
     }
@@ -157,8 +158,15 @@
     .copyright {
       margin: 5px 0 0 0;
 
+
       @include sm-plus {
         float: left;
+      }
+
+      a {
+
+      text-decoration: none;
+
       }
     }
 
