--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,13 +2,13 @@
 
   color: white;
   text-align: center;
-  height: 70vh;
+  height: 80vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover;
+  background-size: cover !important;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.4)
 }
 .banner h1 {
   font-weight: bold;
