--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -29,7 +29,7 @@
                     <div class='icon icon-wrap'>
                       <i class='fa fa-envelope'></i>
                     </div>
-                    <div class='content'><a href="mailto:info@bublinastudio.com"> info@academiatranslations.co.uk </a></div>
+                    <div class='content'><a href="info@academiatranslations.co.uk"> info@academiatranslations.co.uk </a></div>
                   </div>
                 </div>
               </div>
