--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -14,7 +14,7 @@
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 
-  margin-top: 30%;
+  margin-top: 30px;
   font-size: 45px !important;
   line-height: 75px;
 }
@@ -24,7 +24,7 @@
   color: rgba(255, 255, 255, 0.7);
 
 
-  margin-top: 45px;
+  // margin-top: 45px;
   font-size: 30px;
   line-height: 37px;
 }
