--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
 
         <!-- <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/london.jpg'%>');"> -->
 
-        <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>1000, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+        <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
           <div>
              <h1 class='big fadeInRightBig animated'>About us</h2>
           </div>
