--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,7 +1,7 @@
 
 <div id='main' role='main'>
 
-  <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>800, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+  <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
 
     <div>
        <h1 class='big fadeInRightBig animated'>Services</h2>
