--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -26,7 +26,7 @@
                     <div class='col-sm-2 col-sm-offset-4'>
                       <a class='image-link' data-lightbox data-lightbox-gallery='team' href='mailto:info@academiatranslations.co.uk?Subject=Information%20Request&amp;text=Big+image' title='Olivia Cockburn'>
                         <i class='fa fa-envelope'></i>
-                        <img alt="Olivia Cockburn" width="165" height="165" src="<%= asset_path 'at/olivia.jpg' %>" />
+                        <%= cl_image_tag("at/olivia.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto"}], width: '165', height: '165' ) %>
                       </a>
                     </div>
                     <div class='col-sm-4'>
@@ -75,8 +75,9 @@
                 <div class='row'>
                   <div class='col-sm-12 text-center'>
 
-                      <img alt="" height="140" src='<%= image_path 'at/chartered.jpg'%>' />
-                      <img alt="" height="140" src='<%= image_path 'at/MITI.jpg'%>' />
+
+                      <%= cl_image_tag("at/chartered.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto"}], height: '140' ) %>
+                      <%= cl_image_tag("at/MITI.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto"}], height: '140' ) %>
 
                   </div>
                 </div>
@@ -106,7 +107,8 @@
                     <div class='col-sm-2 col-sm-offset-4'>
                       <a class='image-link' data-lightbox data-lightbox-gallery='team' href='mailto:info@academiatranslations.co.uk?Subject=Information%20Request&amp;text=Big+image' title='Rafael Perez'>
                         <i class='fa fa-envelope'></i>
-                        <img alt="Rafael Perez" width="165" height="165" src="<%= asset_path 'at/rafa.jpg' %>" />
+
+                        <%= cl_image_tag("at/rafa.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto"}], width: '165', height: '165' ) %>
                       </a>
                     </div>
 
