--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -1,7 +1,7 @@
 
       <div id='main' role='main'>
 
-      <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/blurry.jpg", :client_hints=>true, :transformation=>[:dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
+      <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/blurry.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
         <div>
            <h1 class='big fadeInRightBig animated'>Media</h2>
         </div>
@@ -43,7 +43,8 @@
                       <div class='row'>
                         <div class='col-sm-3'>
 
-                            <%= image_tag('at/bbc.jpg', :class => "img-responsive center-block img-rounded-half") %>
+
+                            <%= cl_image_tag("at/bbc.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto"}], :class => "img-responsive center-block img-rounded-half" ) %>
 
                         </div>
                         <div class='col-sm-9'>
