--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,8 @@
               </button>
               <a >
                 <%= link_to root_path, class: "navbar-wagon-brand padded" do %>
-                  <%= image_tag "at/Academia.png" %>
+
+                  <%= cl_image_tag("at/Academia.png", :client_hints=>true, :transformation=>[{:dpr=>"auto"}]) %>
                   <% end %>
               </a>
 
