--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -29,7 +29,7 @@
                     <div class='icon icon-wrap'>
                       <i class='fa fa-envelope'></i>
                     </div>
-                    <div class='content'><a href="info@academiatranslations.co.uk"> info@academiatranslations.co.uk </a></div>
+                    <div class='content'><a href='mailto:info@academiatranslations.co.uk?Subject=Information%20Request&amp;text=Big+image'> info@academiatranslations.co.uk </a></div>
                   </div>
                 </div>
               </div>
@@ -53,7 +53,7 @@
                 <p class='copyright'>
                   Academia Translations
                   &copy;
-                  2016 by
+                  2017 by
                 </p>
                 <div>
                   <a href="http://newwaves.design/">
