--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,23 +1,12 @@
       <div id='main' role='main'>
-        <div id='main-content-header'>
-          <div class='container'>
-            <div class='row'>
-              <div class='col-sm-12'>
-                <h1 class='title'>
-                  Blog (Large image)
-                </h1>
-                <ol class='breadcrumb'>
-                  <li>
-                    <a href='index.html'>
-                      <i class='fa fa-home'></i>
-                    </a>
-                  </li>
-                  <li class='active'>Blog</li>
-                </ol>
-              </div>
-            </div>
+
+       <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/ship.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+          <div>
+             <h1 class='big fadeInRightBig animated'>Blog</h2>
           </div>
         </div>
+
+
         <div id='main-content'>
           <div class='container'>
             <div class='row'>
@@ -31,19 +20,19 @@
                           <i class='fa fa-calendar'></i>
                           <span>April 14, 2013</span>
                         </a>
-                        <a class='btn btn-link' href='#'>
+                        <!-- <a class='btn btn-link' href='#'>
                           <i class='fa fa-user'></i>
                           <span>John Doe</span>
                         </a>
                         <a class='btn btn-link' href='#'>
                           <i class='fa fa-comments'></i>
                           <span>13 comments</span>
-                        </a>
+                        </a> -->
                       </div>
                       <div class='row'>
                         <div class='col-sm-12'>
                           <a href='blog_single_post.html'>
-                            <img class="img-responsive center-block img-rounded-half" alt="Cras tempus ligula a tempor adipiscing" width="848" height="364" src="http://placehold.it/848x364" />
+                            <!-- <img class="img-responsive center-block img-rounded-half" alt="Cras tempus ligula a tempor adipiscing" width="848" height="364" src="http://placehold.it/848x364" /> -->
                           </a>
                         </div>
                         <div class='col-sm-12'>
@@ -62,19 +51,19 @@
                           <i class='fa fa-calendar'></i>
                           <span>April 13, 2013</span>
                         </a>
-                        <a class='btn btn-link' href='#'>
+                        <!-- <a class='btn btn-link' href='#'>
                           <i class='fa fa-user'></i>
                           <span>Jane Doe</span>
                         </a>
                         <a class='btn btn-link' href='#'>
                           <i class='fa fa-comments'></i>
                           <span>24 comments</span>
-                        </a>
+                        </a> -->
                       </div>
                       <div class='row'>
                         <div class='col-sm-12'>
                           <a href='blog_single_post.html'>
-                            <img class="img-responsive center-block img-rounded-half" alt="Phasellus rutrum augue nec" width="848" height="364" src="http://placehold.it/848x364" />
+                            <!-- <img class="img-responsive center-block img-rounded-half" alt="Phasellus rutrum augue nec" width="848" height="364" src="http://placehold.it/848x364" /> -->
                           </a>
                         </div>
                         <div class='col-sm-12'>
