--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,11 @@
     <%= action_cable_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <%= render 'favicon' %>
+
+    <% if current_user %>
+     <%= render 'favicon' %>
+    <%end %>
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
 
     <!-- for responsive images using claudinary  -->
