--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <% if current_user %>
-     <%= render 'favicon' %>
+     <%#= render 'favicon' %>
     <%end %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
