add CRUD actions to post blog

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -52,7 +52,7 @@
                 <% if current_user %>
                   <li class='dropdown'>
                     <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='blog.html'>
-                    <a href="/blog.html">
+                    <a href="/articles.html">
                       <span>
                         Blog
                       </span>
