--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,3 +21,70 @@
     </tr>
   <% end %>
 </table>
+
+
+  <div id='main' role='main'>
+
+    <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/ship.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+      <div>
+         <h1 class='big fadeInRightBig animated'>Blog</h2>
+      </div>
+    </div>
+
+
+    <div id='main-content'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-sm-12 col-sm-12 col-md-12'>
+            <div class='text-boxes'>
+
+            <% @articles.each do |article| %>
+
+              <div class='row text-box text-box-title-above text-box-big-image'>
+                <div class='col-sm-12'>
+                  <h2>
+                  <%= link_to article.title, article_path(article), class: 'title' %>
+                  </h2>
+                  <div class='toolbar'>
+
+                      <i class='fa fa-calendar'></i>
+                      <span> <%= article.created_at.strftime("%B %d %Y") %> </span>
+
+                    <!-- <a class='btn btn-link' href='#'>
+                      <i class='fa fa-user'></i>
+                      <span>John Doe</span>
+                    </a>
+                    <a class='btn btn-link' href='#'>
+                      <i class='fa fa-comments'></i>
+                      <span>13 comments</span>
+                    </a> -->
+                  </div>
+                  <div class='row'>
+                    <div class='col-sm-12'>
+                      <a href='blog_single_post.html'>
+                        <!-- <img class="img-responsive center-block img-rounded-half" alt="Cras tempus ligula a tempor adipiscing" width="848" height="364" src="http://placehold.it/848x364" /> -->
+                      </a>
+                    </div>
+                    <div class='col-sm-12'>
+                      <p> <%= article.text %></p>
+
+                      <%= link_to "Read More", articles_path(article), class: "btn btn-contrast btn-bordered btn-xs" %>
+                    </div>
+                  </div>
+                  <hr class='hr-half'>
+                </div>
+              </div>
+
+              <% end %>
+
+
+
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class='fade' id='scroll-to-top'>
+      <i class='fa fa-chevron-up'></i>
+    </div>
+  </div>
+</div>
