fix admin_rails with devise

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -114,7 +114,7 @@
                   <div class='row text-box'>
                     <div class='col-sm-12'>
 
-                      <%= @article.title %>
+                      <%= @article.text %>
 
 
                     </div>
