--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -49,7 +49,7 @@
                       </a>
                     </div>
                     <div class='col-sm-12'>
-                      <p> <%= article.text.first(100)%></p>
+                      <p> <%= article.text.first(500).html_safe %></p>
 
 
 
