add dynamic year

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -53,7 +53,7 @@
                 <p class='copyright'>
                   Academia Translations
                   &copy;
-                  2017 by
+                  <%= Date.today.year %> by
                 </p>
                 <div>
                   <a href="http://newwaves.design/">
