add html_safe to title blog

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -81,7 +81,7 @@
                     <div class='col-sm-12'>
                       <h2 class='title'>
 
-                      <%= link_to @article.title %>
+                      <%= link_to @article.title.html_safe %>
 
                       </h2>
                       <div class='toolbar'>
