--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,7 +26,7 @@
               <div class='row text-box text-box-title-above text-box-big-image'>
                 <div class='col-sm-12'>
                   <h2>
-                  <%= link_to article.title, article_path(article), class: 'title' %>
+                  <%= link_to article.title.html_safe, article_path(article), class: 'title' %>
                   </h2>
                   <div class='toolbar'>
 
