--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -47,7 +47,7 @@
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 
-  margin-top: 60%;
+  // margin-top: 60%;
   font-size: 50px;
   line-height: 75px;
 }
