--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 
     <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/ship.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
       <div>
-         <h1 class='big fadeInRightBig animated'>Blog</h2>
+         <h1 class='big fadeInRightBig animated'>Blog</h1>
       </div>
     </div>
 
@@ -26,7 +26,7 @@
               <div class='row text-box text-box-title-above text-box-big-image'>
                 <div class='col-sm-12'>
                   <h2>
-                  <%= link_to article.title.html_safe, article_path(article), class: 'title' %>
+                  <%= link_to article.title.capitalize, article_path(article), class: 'title' %>
                   </h2>
                   <div class='toolbar'>
 
