--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
 
     <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/apple.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
       <div>
-         <h1 class='big fadeInRightBig animated'>Blog</h2>
+         <h1 class='big fadeInRightBig animated'> <%=  @article.title %></h1>
       </div>
     </div>
 
@@ -81,7 +81,7 @@
                     <div class='col-sm-12'>
                       <h2 class='title'>
 
-                      <%= link_to @article.title.html_safe %>
+
 
                       </h2>
                       <div class='toolbar'>
