adding small changes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -37,7 +37,7 @@
                         <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
                           <i class='fa fa-linkedin'></i>
                         </a>
-                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:info@academiatranslations.co.uk?Subject=Information%20Request" target="_top">
+                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:olivia@academiatranslations.co.uk?Subject=Information%20Request" target="_top">
                           <i class='fa fa-envelope'></i>
                         </a>
                       </div>
@@ -120,7 +120,7 @@
                         <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/rafaelperezechevarria'>
                           <i class='fa fa-linkedin'></i>
                         </a>
-                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:info@academiatranslations.co.uk?Subject=Information%20Request" target="_top">
+                        <a class='btn btn-medium-light btn-sm btn-circle' href="mailto:rafa@academiatranslations.co.uk?Subject=Information%20Request" target="_top">
                           <i class='fa fa-envelope'></i>
                         </a>
                       </div>
