--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -107,6 +107,32 @@
                       <hr class='hr-half'>
                     </div>
                   </div>
+
+                  <div class='row text-box text-box-title-above'>
+                    <div class='col-sm-12'>
+                      <h2> RT.COM Filming</h2>
+                      <div class='toolbar'>
+                        <div class='btn btn-link'>
+                          <i class='fa fa-calendar'></i>
+                          <span>August 18, 2014</span>
+                        </div>
+                      </div>
+                      <div class='row'>
+                        <div class='col-sm-3'>
+
+
+                            <%= cl_image_tag("at/RT.COM_Filming_with_Martyn_Andrews.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto"}], :class => "img-responsive center-block img-rounded-half" ) %>
+
+                        </div>
+                        <div class='col-sm-9'>
+                          <p>RT.COM Filming with Martyn Andrews from rt.com on the evolution of the English language and how technology is changing the way we speak.</p>
+
+                        </div>
+                      </div>
+                      <hr class='hr-half'>
+                    </div>
+                  </div>
+
                   <div class='row text-box text-box-title-above'>
                     <div class='col-sm-12'>
                       <h2>TVE Spanish Television</h2>
@@ -128,8 +154,6 @@
                         </div>
                         <div class='col-sm-9'>
                           <p>Spanish is one of Latin's direct descendants and it may be argued that is just an "evolved" form of Latin with a different name. In this interview with TVE's programme "Saca la Lengua", Olivia discusses the use of Latin terms in Spanish.
-
-
                            </p>
 
                         </div>
@@ -137,6 +161,8 @@
                       <hr class='hr-half'>
                     </div>
                   </div>
+
+
                 </div>
               </div>
             </div>
