--- a/app/assets/stylesheets/jednotka/theme/structure/_navigation.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_navigation.scss
@@ -73,7 +73,7 @@
               text-align: center;
               padding: 10px 20px;
               white-space: normal;
-              // @include text-shadow(1px 1px 1px rgba($black, .3));
+              @include text-shadow(1px 1px 1px rgba($black, .3));
 
               &:hover, &:focus {
                 background-color: darken($nav-dropdown-bg, 10%);
@@ -244,7 +244,7 @@
             color: $nav-item-color;
             height: $nav-height;
             border-bottom: 3px solid transparent;
-            // @include text-shadow(1px 1px 1px rgba($black, .8));
+            @include text-shadow(1px 1px 1px rgba($black, .8));
             @include vertical-align;
           }
 
