put the navbar white back

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
 
 
             </div>
-            <div class='collapse navbar-collapse navbar-header-collapse'>
+            <div class='collapse navbar-collapse navbar-header-collapse' style="font-size: 20px">
               <ul class='nav navbar-nav navbar-right'>
                 <li class='dropdown'>
                   <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='home.html'>
