--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,7 +34,7 @@
 
   color: white;
   text-align: center;
-  height: 70vh;
+  height: 80vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover ;
   // background-position: right 0px bottom -50px;
@@ -47,7 +47,7 @@
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 
-  // margin-top: 60%;
+  margin-top: 60%;
   font-size: 50px;
   line-height: 75px;
 }
