--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <% if current_user %>
+    <%# if current_user %>
     <%= render 'pages/favicon' %>
-    <%end %>
+    <%#end %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
 
