--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,8 +1,8 @@
 
 <div id='main' role='main'>
 
-  <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
-
+  <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>1000, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+    
     <div>
        <h1 class='big fadeInRightBig animated'>Services</h2>
     </div>
@@ -12,16 +12,9 @@
     <div class='container'>
       <div class='row'>
         <div class='col-sm-12'>
-          <div class='text-center'>
-          </div>
-          <div class='row'>
-            <div class='col-sm-12'>
-              <p class='lead lead-xs text-center'>
-              We provide expert translation services in any language. The main languages we work with are <strong> Spanish, Portuguese, French, Italian, Catalan, German and Latin.</strong>
-              </p>
-
-            </div>
-          </div>
+          <p class='lead lead-lg text-center'>
+          We provide expert translation services in any language. The main languages we work with are <strong> Spanish, Portuguese, French, Italian, Catalan, German and Latin.</strong>
+          </p>
         </div>
 
       <div class='row'>
