--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -42,7 +42,7 @@
                       <div class='row'>
                         <div class='col-sm-3'>
                           
-                          <iframe class="img-responsive center-block img-rounded-half" src="https://www.youtube.com/embed/cysu-MF8Xcg" frameborder="0" allowfullscreen></iframe>
+                          <iframe class="img-responsive center-block img-rounded-half" src="https://www.youtube.com/embed/TwVPV9kcy6k" frameborder="0" allowfullscreen></iframe>
 
                         </div>
                         <div class='col-sm-9'>
